--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "예나의 마음을 Unlock!"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "예나"
+name                     : "FENDER JEFF BECK STRATOCASTER® ARTIST SERIES MIDNIGHT PURPLE"
 description              : "일단 무지성 블로그"
 url                      : "https://yenamoon.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
